--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master  # hoặc branch bạn muốn deploy
-
+permissions:
+  contents: write  # cấp quyền push
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,5 +18,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./   # nếu file index.html ở root repo
